syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "com.example.demo.proto";
option java_multiple_files = true;

message CreateLogRequest {
  int32 operation_service = 1;
  int32 operation_type = 2;
  string username = 3;
  optional int64 cashier_code = 4;
  string json = 5;
}

service LogService {
  rpc createLog(CreateLogRequest) returns (google.protobuf.Empty) {};
}